; ModuleID = '/home/carl/AnghaBench/git/extr_config.c_git_config_get_max_percent_split_change.c'
source_filename = "/home/carl/AnghaBench/git/extr_config.c_git_config_get_max_percent_split_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"splitindex.maxpercentchange\00", align 1
@.str.1 = private unnamed_addr constant [67 x i8] c"splitIndex.maxPercentChange value '%d' should be between 0 and 100\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_config_get_max_percent_split_change() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 -1, i32* %2, align 4
  %3 = call i32 @git_config_get_int(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32* %2)
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %17, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* %2, align 4
  %7 = icmp sle i32 0, %6
  br i1 %7, label %8, label %13

8:                                                ; preds = %5
  %9 = load i32, i32* %2, align 4
  %10 = icmp sle i32 %9, 100
  br i1 %10, label %11, label %13

11:                                               ; preds = %8
  %12 = load i32, i32* %2, align 4
  store i32 %12, i32* %1, align 4
  br label %18

13:                                               ; preds = %8, %5
  %14 = call i32 @_(i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str.1, i64 0, i64 0))
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @error(i32 %14, i32 %15)
  store i32 %16, i32* %1, align 4
  br label %18

17:                                               ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %18

18:                                               ; preds = %17, %13, %11
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i32 @git_config_get_int(i8*, i32*) #1

declare dso_local i32 @error(i32, i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
